intTests/test_type_errors/unify009.log.good
Loading file "unify009.saw"
Type errors:
  unify009.saw:21:6-21:19: Error: Type mismatch.
    Expected: String
    Found:    Int

    Expected: Int -> String
    Found:    Int -> Int

  unify009.saw:21:33-21:38: Note: The type String arises from the type of this term
  unify009.saw:21:16-21:19: Note: The type Int arises from this type annotation


FAILED
